src/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>BRI_Parent_under_Drugs__c</fullName>
        <label>Parent under Drugs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_under_alcohol__c</fullName>
        <label>Parent under alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Partner_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Playby_Play_Acc__c</fullName>
        <label>Playby Play Acc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Playby_Play_Anch__c</fullName>
        <label>Playby Play Anch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Playby_Play_F__c</fullName>
        <label>Playby Play F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Playby_Play_O__c</fullName>
        <label>Playby Play O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Police_Activity_Risk__c</fullName>
        <label>Police Activity Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Police_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Police Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Read_To_Child__c</fullName>
        <label>Read To Child</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>a</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Reason_Discontinue_BF__c</fullName>
        <label>Reason Discontinue BF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baby Jaundice</fullName>
                </value>
                <value>
                    <fullName>Baby Not Gaining Weight</fullName>
                </value>
                <value>
                    <fullName>Baby Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>Did Not Initiate - Contraindicated</fullName>
                </value>
                <value>
                    <fullName>Did Not Initiate by Choice</fullName>
                </value>
                <value>
                    <fullName>Difficult Latching</fullName>
                </value>
                <value>
                    <fullName>Discontinue by choice of other than those listed</fullName>
                </value>
                <value>
                    <fullName>Family/Friends Discouragement</fullName>
                </value>
                <value>
                    <fullName>MOB back to school/work</fullName>
                </value>
                <value>
                    <fullName>Mob Illness</fullName>
                </value>
                <value>
                    <fullName>Mom does not have custody or opportunity</fullName>
                </value>
                <value>
                    <fullName>Nipple Issue</fullName>
                </value>
                <value>
                    <fullName>Not Enough Milk</fullName>
                </value>
                <value>
                    <fullName>Right Time</fullName>
                </value>
                <value>
                    <fullName>Subsequent Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Too Difficult</fullName>
                </value>
                <value>
                    <fullName>Too Much Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Referral_Counseling__c</fullName>
        <label>Referral Counseling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Education__c</fullName>
        <label>Referral Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Employment__c</fullName>
        <label>Referral Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Financial__c</fullName>
        <label>Referral Financial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Food_Stamps__c</fullName>
        <label>Referral Food Stamps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Headstart__c</fullName>
        <label>Referral Headstart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Health_Care__c</fullName>
        <label>Referral Health Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_House_Assist__c</fullName>
        <label>Referral House Assist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Immunizations__c</fullName>
        <label>Referral Immunizations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Made__c</fullName>
        <label>Referral Made</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Med_Assist__c</fullName>
        <label>Referral Med Assist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Preschool__c</fullName>
        <label>Referral Preschool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Reading_Literacy__c</fullName>
        <label>Referral Reading/Literacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Recreation__c</fullName>
        <label>Referral Recreation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_Respite_Child_Care__c</fullName>
        <label>Referral Respite Child Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_WIC__c</fullName>
        <label>Referral WIC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Refferal_Incident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refferal Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Rhythm__c</fullName>
        <label>Rhythm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_SA_Number__c</fullName>
        <label>SA Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_ScreenNumber__c</fullName>
        <label>ScreenNumber</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Self_Injury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Injury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_SleepOnback__c</fullName>
        <label>SleepOnback</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Smile__c</fullName>
        <label>Smile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_SoftBedding__c</fullName>
        <label>SoftBedding</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Staff_Type__c</fullName>
        <label>Staff Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Staff__c</fullName>
        <label>Staff</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_State_ID__c</fullName>
        <label>State ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_1__c</fullName>
        <label>Step 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_1_by_When__c</fullName>
        <label>Step 1 by When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Step_1_by_Who__c</fullName>
        <label>Step 1 by Who</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_1_outcome__c</fullName>
        <label>Step 1 outcome</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_1_outcome_date__c</fullName>
        <label>Step 1 outcome date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Step_2__c</fullName>
        <label>Step 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_2_by_When__c</fullName>
        <label>Step 2 by When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Step_2_by_Who__c</fullName>
        <label>Step 2 by Who</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_2_outcome__c</fullName>
        <label>Step 2 outcome</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_2_outcome_date__c</fullName>
        <label>Step 2 outcome date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Step_3__c</fullName>
        <label>Step 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_3_by_When__c</fullName>
        <label>Step 3 by When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Step_3_by_Who__c</fullName>
        <label>Step 3 by Who</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_3_outcome__c</fullName>
        <label>Step 3 outcome</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Step_3_outcome_date__c</fullName>
        <label>Step 3 outcome date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Strengths__c</fullName>
        <label>Strengths</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Substance_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substance Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Success_1__c</fullName>
        <label>Success 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Success_2__c</fullName>
        <label>Success 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Success_3__c</fullName>
        <label>Success 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Suicidal_Behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suicidal Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Suicidal_Threat__c</fullName>
        <label>Suicidal Threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Supervisor_Notified_Date__c</fullName>
        <label>Supervisor Notified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Supervisor_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supervisor Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Supplement_Milk__c</fullName>
        <label>Supplement Milk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Support__c</fullName>
        <label>Support</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Target_2_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target 2 involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Target_3_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target 3 involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Target_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Target_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target 1 involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Travel_Time__c</fullName>
        <label>Travel Time</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Urgent_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_User_Time_Begin__c</fullName>
        <label>User Time Begin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_User_Time_Conclude__c</fullName>
        <label>User Time Conclude</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_User_Travel_Time__c</fullName>
        <label>User Travel Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Visit_Number__c</fullName>
        <label>Visit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_WBUptodate__c</fullName>
        <label>WBUptodate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Weapons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weapons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Why_1__c</fullName>
        <label>Why 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Why_2__c</fullName>
        <label>Why 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Why_3__c</fullName>
        <label>Why 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_WorkerThreatSafety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Threat / Safety Issue for Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Worker Witnessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Xfer1__c</fullName>
        <label>Xfer1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Xfer2__c</fullName>
        <label>Xfer2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cheers_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheers completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Type__c</fullName>
        <label>ER Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Urgent_Care_Visit_Due_To__c</fullName>
        <label>ER Urgent Care Visit Due To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accident / Injury</fullName>
                </value>
                <value>
                    <fullName>Acute Illness</fullName>
                </value>
                <value>
                    <fullName>Ingestion</fullName>
                </value>
                <value>
                    <fullName>Pregnancy related issue</fullName>
                </value>
                <value>
                    <fullName>Prolonged illness not seen by PCP</fullName>
                </value>
                <value>
                    <fullName>Prolonged illness previously seen by PCP</fullName>
                </value>
                <value>
                    <fullName>Unable to determine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As a supervisor  can click the checkbox on the Home Visit Record. As an FSW, the click box is visible but disabled or read only.</description>
        <label>FSW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GOAL_1__c</fullName>
        <formula>HYPERLINK(&quot;http://www.salesforce.com&quot;, &quot;GOAL-1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOAL 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOAL_2__c</fullName>
        <formula>HYPERLINK(&quot;http://www.GOOGLE.com&quot;, &quot;GOAL-2&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOAL 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOAL_3__c</fullName>
        <formula>HYPERLINK(&quot;one/one.app#/sObject/Activity__c/new?RecordType=a06r0000000xzLNAAY&quot;, 
&quot;Name&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOAL 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Number__c</fullName>
        <displayFormat>GN-{0000}</displayFormat>
        <label>Goal Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Goal_Plan_Keyword__c</fullName>
        <label>Goal Plan Keyword</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Visits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Visits</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Activity__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Home Visit, Home Visit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Goal Plans</relationshipLabel>
        <relationshipName>GoalPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Goalplans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Goalplans</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GoalPlans</relationshipLabel>
        <relationshipName>GoalPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Homevisits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Homevisits</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HomeVisits</relationshipLabel>
        <relationshipName>HomeVisits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Incident_Reports__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Incident Reports</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incident Reports</relationshipLabel>
        <relationshipName>HomeVisits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncidentR_Number__c</fullName>
        <description>This field is for keeping the Incident report Count</description>
        <label>IncidentR Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Goal__c</fullName>
        <label>Number Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oldsib_present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oldsib present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentSurvey_Number__c</fullName>
        <label>ParentSurvey Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_concern__c</fullName>
        <label>Parent concern</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadTellStorysing__c</fullName>
        <label>ReadTellStorysing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BRI_HomeVisit_Number__c</columns>
        <columns>BRI_Duration__c</columns>
        <columns>BRI_Self_Injury__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GoalPlan_View</fullName>
        <columns>Goal_Plan_Keyword__c</columns>
        <columns>BRI_Goal_1__c</columns>
        <filterScope>Mine</filterScope>
        <label>GoalPlan View</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>BRI_Adult_1_involved__c</columns>
        <filterScope>Mine</filterScope>
        <label>test</label>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <recordTypes>
        <fullName>BRI_Secondary_Activity</fullName>
        <active>true</active>
        <label>Secondary Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goal_Plan</fullName>
        <active>true</active>
        <label>Goal Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Visit</fullName>
        <active>true</active>
        <label>Home Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incidents</fullName>
        <active>true</active>
        <label>Incidents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Safety_Plan</fullName>
        <active>false</active>
        <label>Safety Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Create_date_cannot_be_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>OR(BRI_CPCS_Create_Date__c  &gt;  NOW(),
 BRI_CPCS_Create_Date__c  &gt; BRI_CPCS_End_Date__c )</errorConditionFormula>
        <errorMessage>Crete date cannot be in future and End date cannot be prior to start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Cannot_Be_in_Future</fullName>
        <active>true</active>
        <description>if the date is selected for future then its an error</description>
        <errorConditionFormula>BRI_Date__c  &gt;   NOW()</errorConditionFormula>
        <errorDisplayField>BRI_Date__c</errorDisplayField>
        <errorMessage>&quot; Date Cannot be in Future &quot;</errorMessage>
    </validationRules>
</CustomObject>